@@ -25,6 +25,7 @@ Deprecated
 * ``sphinx.util.inspect.Signature.format_annotation_new()``
 * ``sphinx.util.inspect.Signature.format_annotation_old()``
 * ``sphinx.util.inspect.Signature.has_retval``
+* ``sphinx.util.inspect.Signature.partialmethod_with_noargs``
 
 Features added
 --------------
